# svm-gmmu

./: .gitignore  README.md  pyproject.toml
docs/reports/: .gitignore
docs/reports/report_1/: report.tex
docs/reports/report_2/: report.tex
examples/: banana_crescent.ipynb  close_separable.ipynb  close_separable2.ipynb
experiments/: gmu_vs_gsu_approximation.ipynb  svm_gmu_convergence.ipynb
src/svm_gmmu/: __init__.py  _estimator.py  _loss.py  _plotting.py  _validation.py  plotting.py
src/svm_gmu/: _estimator.py  _loss.py  _plotting.py  _validation.py
tests/: test_estimator.py  test_loss.py
