[project]
name = "svm-gmmu"
version = "0.1.0"
description = "SVM with Gaussian Mixture Model Uncertainty (SVM-GMMU)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "scipy>=1.12", "scikit-learn>=1.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svm_gmmu"]
